fix z-index

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -48,6 +48,7 @@
     .email-form-block {
       .images-content {
         background: none;
+        z-index: -2;
       }
     }
   }
