--- a/src/scss/styleComponents/email-form.scss
+++ b/src/scss/styleComponents/email-form.scss
@@ -11,6 +11,7 @@
     transition: 0.2s;
     overflow: hidden;
     z-index: 1;
+    transition: 0.2s;
 
     .form-content {
       padding: 62px 0px 62px 96px;
